fixed image size for too big images in news webview (images were larger than display)

--- a/app/src/main/assets/news_dialog_stylesheet.css
+++ b/app/src/main/assets/news_dialog_stylesheet.css
@@ -17,3 +17,8 @@ a {
 	color: #788F94;
 	font-weight: bold;
 }
+img {
+	display: inline;
+	height: auto !important;
+	max-width: 100%;
+}
